# harbour-babbage

./: .clang-format  CMakeLists.txt  LICENSE  README.md  harbour-babbage.desktop  harbour-babbage.pro
.github/workflows/: build.yaml
icons/: header.sty
images/: harbour_cover.xcf
qml/: harbour-babbage.qml
qml/components/: ExprtkMenu.qml  FunctionDoc.qml  PCButton.qml  QueryArea.qml  QueryField.qml  en-exprtk-functions.js  en_US-exprtk-functions.json  en_US-exprtk-prototypes.json
qml/cover/: CoverPage.qml
qml/pages/: About.qml  EditExpression.qml  Expressions.qml  Exprtk.qml  ExprtkPrototypes.qml  Functions.qml  MainPage.qml  SimpleCalculator.qml  Variables.qml
rpm/: harbour-babbage.changes.in  harbour-babbage.spec  harbour-babbage.yaml
src/: AppModel.cpp  AppModel.hpp  Calculator.cpp  Calculator.hpp  FormularyExpression.cpp  FormularyExpression.hpp  FormularyListModel.cpp  FormularyListModel.hpp  Variable.cpp  Variable.hpp  VariablesListModel.cpp  VariablesListModel.hpp  Version.h.in  calculator.cpp  calculator.hpp  constants.hpp  harbour-babbage.cpp  math_parser.hpp  special_functions.hpp
translations/: harbour-babbage-de.ts  harbour-babbage-en.ts  harbour-babbage-es.ts  harbour-babbage.de.ts  harbour-babbage.en.ts  harbour-babbage.es.ts  harbour-babbage.ts
